--- a/package.json
+++ b/package.json
@@ -1,8 +1,23 @@
 {
   "dependencies": {
+    "@prisma/client": "^4.15.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "socket.io": "^4.6.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.2.6",
+    "esbuild-register": "^3.4.2",
     "nodemon": "^2.0.22",
     "prisma": "^4.15.0",
-    "socket.io": "^4.6.2"
+    "typescript": "^5.1.3"
+  },
+  "scripts": {
+    "dev": "nodemon --config "
   }
 }
