--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
-{
+{ 
+  "prisma":{
+  "seed": "node --require esbuild-register prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^4.15.0",
     "cors": "^2.8.5",
@@ -18,6 +21,7 @@
     "typescript": "^5.1.3"
   },
   "scripts": {
-    "dev": "nodemon --config "
+    "dev": "nodemon src/index.ts",
+    "seed": "prisma db seed"
   }
 }
