--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "config": "^3.3.9",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
+    "esbuild": "^0.18.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "node-emoji": "1.11.0",
