--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   },
   "dependencies": {
     "@prisma/client": "^4.15.0",
+    "bunyan": "^1.8.15",
     "config": "^3.3.9",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "esbuild": "^0.18.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
     "node-emoji": "1.11.0",
     "serialize-error": "^11.0.0",
@@ -17,6 +19,7 @@
     "winston": "^3.9.0"
   },
   "devDependencies": {
+    "@types/bunyan": "^1.8.8",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
