--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.15.0",
+    "@types/node-emoji": "^1.8.2",
     "bunyan": "^1.8.15",
     "config": "^3.3.9",
     "cors": "^2.8.5",
