--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
+    "faker": "^6.6.6",
     "node-emoji": "1.11.0",
     "serialize-error": "^11.0.0",
     "socket.io": "^4.6.2",
@@ -32,6 +33,8 @@
   },
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "seed": "prisma db seed"
+    "seed": "prisma db seed",
+    "update": "npx prisma generate && npx prisma db push && yarn seed"
   }
+
 }
