--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@prisma/client": "^4.15.0",
     "@types/node-emoji": "^1.8.2",
-    "bunyan": "^1.8.15",
     "config": "^3.3.9",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
@@ -13,8 +12,9 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
-    "faker": "^6.6.6",
+    "faker": "^5.5.3",
     "node-emoji": "1.11.0",
+    "reflect-metadata": "^0.1.13",
     "serialize-error": "^11.0.0",
     "socket.io": "^4.6.2",
     "ts-node": "^10.9.1",
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/bunyan": "^1.8.8",
+    "@types/config": "^3.3.0",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
@@ -36,5 +37,4 @@
     "seed": "prisma db seed",
     "update": "npx prisma generate && npx prisma db push --force-reset && yarn seed"
   }
-
 }
