--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "dependencies": {
     "@prisma/client": "^4.15.0",
     "@types/node-emoji": "^1.8.2",
+    "axios": "^1.4.0",
     "config": "^3.3.9",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "esbuild": "^0.18.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-jwt": "^8.4.1",
     "express-validator": "^7.0.1",
     "faker": "^5.5.3",
+    "firebase-admin": "^11.9.0",
+    "firebase-service": "^5.0.7",
+    "jwks-rsa": "^3.0.1",
     "node-emoji": "1.11.0",
     "reflect-metadata": "^0.1.13",
     "serialize-error": "^11.0.0",
